--- a/3zb2/ctf.cfg
+++ b/3zb2/ctf.cfg
@@ -56,6 +56,9 @@ set vwep 1
 //Flag keeper mode on/off (default off = 0,on = 1) (get the flag and get points for the time keeping the flag .. your teammates also get points)
 set zigmode 0
 
+//Specify 'basedir' (Location of baseq2)
+//set basepath "/usr/share/games/quake2"
+
 //set the spectator mode on/off (default off = 0,on = 1) fire button-catch and release & [ or ] button-select target
 set spectator 0
 
